Added my failures

--- a/index.html
+++ b/index.html
@@ -27,13 +27,34 @@
 
     <main>
 
-        
+        <section>
+            <div class="my_failures">
+
+              <div class="img">
+                <img src="images/person.png" alt="">
+              </div>
+
+                <div class="failure_container">
+                    <h3 class="title_heading">My failures of <br>previous year</h3>
+                    <p class="containt_description">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
+                    <div class="bullet_point">
+                        <ul>
+                            <li> Contrary to popular belief, is not simply.</li>
+                            <li> Contrary to popular belief.</li>
+                            <li> Contrary to popular , is not simply.</li>
+                            <li> Contrary to popular belief, is not simply.</li>
+                            <li> Contrary to popular simply.</li>
+                        </ul>
+                    </div>
+                </div>      
+            </div>
+        </section>
 
     </main>
 
     <footer>
 
     </footer>
-</body>
+    </body>
 
 </html>
