--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
               </div>
 
                 <div class="failure_container">
+                </h1>
                     <h3 class="title_heading">My failures of <br>previous year</h3>
                     <p class="containt_description">Contrary to popular belief, Lorem Ipsum is not <br> simply random text. It has roots in a piece of <br> classical Latin literature from 45 BC, making it over <br> 2000 years old. Richard McClintock.</p>
                     <div class="bullet_point">
@@ -47,6 +48,34 @@
                         </ul>
                     </div>
                 </div>      
+            </div>
+        </section>
+        <section>
+            <div class="my_plans">
+                <h1 class="my_plans_title">My Plans</h1>
+                <div class="my_plan_container">
+                    <!-- h1.my_plans_title>.plan*4>img+h1.title+p.title_description -->
+                        <div class="plan">
+                            <img src="images/icons/web.png" alt="">
+                            <h1 class="title">Web Development</h1>
+                            <p class="title_description">I want to start</p>
+                        </div>
+                        <div class="plan">
+                            <img src="images/icons/js.png" alt="">
+                            <h1 class="title">Javascript</h1>
+                            <p class="title_description">I want to learn</p>
+                        </div>
+                        <div class="plan">
+                            <img src="images/icons/smoke.png" alt="">
+                            <h1 class="title">Smoking Habit</h1>
+                            <p class="title_description">I want to end</p>
+                        </div>
+                        <div class="plan">
+                            <img src="images/icons/ecom.png" alt="">
+                            <h1 class="title">ecommerce</h1>
+                            <p class="title_description">I want to develop</p>
+                        </div>
+                </div>
             </div>
         </section>
 
