Complete new year project

--- a/index.html
+++ b/index.html
@@ -91,6 +91,30 @@
     </main>
 
     <footer>
+        <div class="footer_conteinar">
+            <!-- h1.footer_title+p.fotter_description+p*2.contact+img*3.fo0ter_logo -->
+             <div class="footer_content">
+
+            
+            <h1 class="footer_title">Future</h1>
+            <p class="fotter_description">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
+            <p class="contact">Email : info@gmail.com</p>
+            <p class="contact">Phone : 01500 00 00 00</p>
+            <img src="images/icons/fb.png" alt="" class="footer_logo">
+            <img src="images/icons/twitter.png" alt="" class="footer_logo">
+            <img src="images/icons/youtube.png" alt="" class="footer_logo">
+        </div>
+
+        <div class="footer_form">
+            <h1 class="footer_from_title">Subscribe</h1>
+            <form action="">
+                <input type="email" name="" placeholder="Enter your email" id="">
+                <!-- <input type="button" value="Subscribe"> -->
+            </form> 
+            <button class="fotter_button">Subscribe</button>
+        </div>
+
+        </div>
 
     </footer>
 </body>
